feat: Records for the paxos requests/responses and better prepare phase